--- a/AlgoLaw_Website/AlgoLawWeb/templates/layout.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/layout.html
@@ -19,31 +19,37 @@
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.css">
         <script src="https://cdn.jsdelivr.net/npm/fullcalendar@5.10.1/main.min.js"></script>
     </head>
-<body>
-    <header class="site-header">
-      <nav class="navbar navbar-expand-md navbar-dark bg-steel fixed-top">
-        <div class="container">
-          <a class="navbar-brand mr-4" href="/">AlgoLaw</a>
-          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarToggle">
-            <div class="navbar-nav mr-auto">
-              <a class="nav-item nav-link" href="{{ url_for('home') }}">Home</a>
-{#              <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>#}
+<body style="background-image: url({{url_for('static',filename = 'Web_models/main_background_color.png')}})">
+    <header class="site-header" >
+      <nav class="navbar navbar-expand-md navbar-dark fixed-top" style="background-image: url({{url_for('static',filename = 'Web_models/banner_background_color.png')}})">
+            <div class="container">
+<!--                  <a class="navbar-brand mr-4" href="/">AlgoLaw</a>-->
+        <!--          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle" aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">-->
+        <!--            <span class="navbar-toggler-icon"></span>-->
+        <!--          </button>-->
+                  <div class="collapse navbar-collapse" id="navbarToggle">
+                      <div class="navbar-nav mr-auto">
+                          <a  href="{{ url_for('home') }}" class="nav-item nav-link">
+                              <img src="{{url_for('static',filename = 'Web_models/home_button.jpeg')}}" width="160" height="70">
+                          </a>
+                          {% if current_user.is_authenticated %}
+<!--        {#                    <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>#}-->
+                          <a class="nav-item nav-link" href="{{ url_for('logout') }}" class="nav-item nav-link">
+                              <img src="{{url_for('static',filename = 'Web_models/logout_button.jpeg')}}" width="160" height="70">
+                          </a>
+                          {% else %}
+                              <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
+                              <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+                          {% endif %}
+<!--        {#              <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>#}-->
+                      </div>
+                    <!-- Navbar Right Side -->
+                    <div class="navbar-nav">
+                        <img src="{{url_for('static',filename = 'Web_models/banner.png')}}" width="300" height="100">
+                    </div>
+                  </div>
             </div>
-            <!-- Navbar Right Side -->
-            <div class="navbar-nav">
-                {% if current_user.is_authenticated %}
-{#                    <a class="nav-item nav-link" href="{{ url_for('account') }}">Account</a>#}
-                    <a class="nav-item nav-link" href="{{ url_for('logout') }}">Logout</a>
-                {% else %}
-                    <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                    <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
-                {% endif %}
-            </div>
-          </div>
-        </div>
+<!--          </img>-->
       </nav>
     </header>
     <main role="main" class="container">
@@ -60,10 +66,17 @@
             {% endwith %}
 
 
-            {% block content %}
-            {% endblock %}
+
         </div>
       </div>
+        <br>
+        <br>
+        <div class="row" style="position:relative">
+            <div class="col-md-12">
+                {% block content %}
+                {% endblock %}
+            </div>
+        </div>
     </main>
 
 
