--- a/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
@@ -9,22 +9,22 @@
         </div>
         <div class="d-flex justify-content-center align-content-around flex-wrap">
             <div>
-                <a href="{{ url_for('judge_case_assignments') }}">
+                <a href="{{ url_for('upload_generic', variable='מתן אילוצים') }}">
                     <img src="{{url_for('static',filename = 'Web_models/changes_for_schedule_big.jpeg')}}" width="200" height="200">
                 </a>
             </div>
             <div>
-                <a href="{{ url_for('home') }}">
+                <a href="{{ url_for('upload_generic', variable='שינוי סיווג הרשאות') }}">
                     <img src="{{url_for('static',filename = 'Web_models/change_privilage_big.jpeg')}}" width="200" height="200">
                 </a>
             </div>
             <div>
-                <a href="{{ url_for('home') }}">
+                <a href="{{ url_for('upload_generic', variable='שיבוץ תורנויות') }}">
                     <img src="{{url_for('static',filename = 'Web_models/schedule_chore_big.jpeg')}}" width="200" height="200">
                 </a>
             </div>
             <div>
-                <a href="{{ url_for('home') }}">
+                <a href="{{ url_for('upload_generic', variable='שיבוץ תיקים') }}">
                     <img src="{{url_for('static',filename = 'Web_models/schedule_cases_big.jpeg')}}" width="200" height="200">
                 </a>
             </div>
@@ -34,17 +34,17 @@
                 </a>
             </div>
             <div>
-                <a href="{{ url_for('home') }}">
+                <a href="{{ url_for('upload_generic', variable='שיבוץ חגים ומועדים') }}">
                     <img src="{{url_for('static',filename = 'Web_models/schedule_vacation_big.jpeg')}}" width="200" height="200">
                 </a>
             </div>
             <div>
-                <a href="{{ url_for('home') }}">
+                <a href="{{ url_for('upload_generic', variable='לו״ז בית הדין למשמורת') }}">
                     <img src="{{url_for('static',filename = 'Web_models/schedule_chores_other_big.jpeg')}}" width="200" height="200">
                 </a>
             </div>
             <div>
-                <a href="{{ url_for('home') }}">
+                <a href="{{ url_for('upload_generic', variable='דחיית דיון') }}">
                     <img src="{{url_for('static',filename = 'Web_models/push_back_case_big.jpeg')}}" width="200" height="200">
                 </a>
             </div>
