--- a/AlgoLaw_Website/AlgoLawWeb/templates/judge_personal_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/judge_personal_space.html
@@ -10,23 +10,23 @@
         </div>
         <div class="d-flex justify-content-center">
             <div>
-                <a href="{{ url_for('judge_case_assignments') }}">
-                    <img src="{{url_for('static',filename = 'Web_models/look_at_schedule_big.jpeg')}}" width="200" height="200">
-                </a>
-            </div>
-            <div>
-                <a href="{{ url_for('home') }}">
-                    <img src="{{url_for('static',filename = 'Web_models/look_for_cases_big.jpeg')}}" width="200" height="200">
-                </a>
-            </div>
-            <div>
-                <a href="{{ url_for('home') }}">
+                <a href="{{ url_for('judge_long_vaca') }}">
                     <img src="{{url_for('static',filename = 'Web_models/ask_for_long_vacation_big.jpeg')}}" width="200" height="200">
                 </a>
             </div>
             <div>
-                <a href="{{ url_for('home') }}">
+                <a href="{{ url_for('judge_short_vaca') }}">
                     <img src="{{url_for('static',filename = 'Web_models/short_vacation_big.jpeg')}}" width="200" height="200">
+                </a>
+            </div>
+            <div>
+                <a href="{{ url_for('judge_case_search') }}">
+                    <img src="{{url_for('static',filename = 'Web_models/look_for_cases_big.jpeg')}}" width="200" height="200">
+                </a>
+            </div>
+            <div>
+                <a href="{{ url_for('judge_case_assignments') }}">
+                    <img src="{{url_for('static',filename = 'Web_models/look_at_schedule_big.jpeg')}}" width="200" height="200">
                 </a>
             </div>
         </div>
