--- a/AlgoLaw_Website/AlgoLawWeb/templates/layout.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/layout.html
@@ -38,8 +38,8 @@
                               <img src="{{url_for('static',filename = 'Web_models/logout_button.jpeg')}}" width="160" height="70">
                           </a>
                           {% else %}
-                              <a class="nav-item nav-link" href="{{ url_for('login') }}">Login</a>
-                              <a class="nav-item nav-link" href="{{ url_for('register') }}">Register</a>
+                              <a class="nav-item nav-link" href="{{ url_for('login') }}">התחבר/י</a>
+                              <a class="nav-item nav-link" href="{{ url_for('register') }}">הירשמ/י</a>
                           {% endif %}
 <!--        {#              <a class="nav-item nav-link" href="{{ url_for('about') }}">About</a>#}-->
                       </div>
@@ -53,7 +53,9 @@
       </nav>
     </header>
     <main role="main" class="container">
-      <div class="row">
+        <br>
+        <br>
+        <div class="row">
         <div class="col-md-12">
             {% with messages = get_flashed_messages(with_categories=true) %}
                 {% if messages %}
@@ -64,13 +66,8 @@
                     {% endfor %}
                 {% endif %}
             {% endwith %}
-
-
-
         </div>
       </div>
-        <br>
-        <br>
         <div class="row" style="position:relative">
             <div class="col-md-12">
                 {% block content %}
