--- a/AlgoLaw_Website/AlgoLawWeb/templates/register.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/register.html
@@ -4,7 +4,7 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4"> Register! </legend>
+                <legend class="border-bottom mb-4"> !הירשם </legend>
                 <div class="form-group">
                     {{ form.username.label(class="form-control-label") }}
 
@@ -56,6 +56,20 @@
                         </div>
                     {% else %}
                         {{ form.confirm_password(class="form-control form-control-lg") }}
+                    {% endif %}
+                </div>
+                <div class="form-group">
+                    {{ form.role.label(class="form-control-label") }}
+
+                    {% if form.role.errors %}
+                        {{ form.role(class="form-control form-control-lg is-invalid") }}
+                        <div class="invalid-feedback">
+                            {% for error in form.role.errors %}
+                                <span>{{ error }}</span>
+                            {% endfor %}
+                        </div>
+                    {% else %}
+                        {{ form.role(class="form-control form-control-lg") }}
                     {% endif %}
                 </div>
                 <div class="form-group">
