--- a/AlgoLaw_Website/AlgoLawWeb/templates/login.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/login.html
@@ -4,7 +4,7 @@
         <form method="POST" action="">
             {{ form.hidden_tag() }}
             <fieldset class="form-group">
-                <legend class="border-bottom mb-4"> Login </legend>
+                <legend class="border-bottom mb-4"> התחברות </legend>
                 <div class="form-group">
                     {{ form.email.label(class="form-control-label") }}
                     {% if form.email.errors %}
@@ -39,14 +39,14 @@
                     {{ form.submit(class="btn btn-outline-info") }}
                 </div>
                 <small class="text-muted ml-2">
-                    <a href="#">Forgot Password?</a>
+                    <a href="#">שחכתי סיסמא</a>
                 </small>
             </fieldset>
         </form>
     </div>
     <div class="border-top pt-3">
         <small class="text-muted">
-            Need an Account? <a class="ml-2" href="{{ url_for('register') }}"> Sign Up now </a>
+            אין משתמש? <a class="ml-2" href="{{ url_for('register') }}"> הירשמו עכשיו </a>
         </small>
     </div>
 {% endblock content %}
