some boldings to words and hello to specific judge

--- a/AlgoLaw_Website/AlgoLawWeb/templates/judge_long_vaca.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/judge_long_vaca.html
@@ -10,7 +10,7 @@
     <div class="d-flex">
         <div id="judge_calendar" class="col-md-11"></div>
         <div class="col-md-3">
-            <h2 class="form-group text-right"> בקשת חופשה ארוכה </h2>
+            <h2 class="form-group text-right" style="font-weight: bold;"> בקשת חופשה ארוכה </h2>
               <ul class="list-group">
 
                   <button onclick="{ judge_calendar.changeView('dayGridMonth') }" class="btn btn-outline-info">חודשי</button>
