--- a/AlgoLaw_Website/AlgoLawWeb/templates/judge_personal_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/judge_personal_space.html
@@ -5,6 +5,7 @@
         <div class="p-2 d-flex justify-content-end">
             <img src="{{url_for('static',filename = 'Web_models/judge_personal_space.jpeg')}}" width="180" height="70">
         </div>
+        <h3 class="p-2 d-flex justify-content-end" style="font-weight: bold;">{{username}} שלום</h3>
         <div class="p-2 d-flex justify-content-end">
             <h3 style="font-weight: bold;">יש לבחור את הפעולה הרצויה</h3>
         </div>
