--- a/AlgoLaw_Website/AlgoLawWeb/templates/judge_short_vaca.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/judge_short_vaca.html
@@ -10,7 +10,7 @@
     <div class="d-flex">
         <div id="judge_calendar" class="col-md-11"></div>
         <div class="col-md-3">
-              <h2 class="form-group text-right"> זימון חופשה קצרה </h2>
+              <h2 class="form-group text-right" style="font-weight: bold;"> זימון חופשה קצרה </h2>
               <ul class="list-group">
                   <button onclick="{ judge_calendar.changeView('dayGridMonth') }" class="btn btn-outline-info">חודשי</button>
                   <button onclick="{ judge_calendar.changeView('dayGridWeek') }" class="btn btn-outline-info">שבועי</button>
