added short vacation and master page

--- a/AlgoLaw_Website/AlgoLawWeb/templates/master_vacation_view.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/master_vacation_view.html
@@ -9,36 +9,39 @@
     <div class="d-flex">
         <div id="judge_calendar" class="col-md-11"></div>
         <div class="col-md-3">
-              <h2 class="form-group text-right" style="font-weight: bold;"> זימון חופשה קצרה </h2>
+            <h2 class="form-group text-right" style="font-weight: bold;"> חופשות </h2>
               <ul class="list-group">
+
                   <button onclick="{ judge_calendar.changeView('dayGridMonth') }" class="btn btn-outline-info">חודשי</button>
                   <button onclick="{ judge_calendar.changeView('dayGridWeek') }" class="btn btn-outline-info">שבועי</button>
                   <button onclick="{ judge_calendar.changeView('timeGridDay') }" class="btn btn-outline-info">יומי</button>
                   <br>
                   <br>
                   <br>
-                  <form method="POST" action="">
-                      {{ form.hidden_tag() }}
-                      <fieldset class="form-group">
-    <!--                      Show when the vacation is-->
-                          <div id="start_date" class="form-group text-right">
-                              {{ form.start_date.label(class="form-control-label") }}
-                          </div>
-                          <div class="form-group text-md-center">
-                              {{form.start_date(id="start_date_value")}}
-<!--                              {{ form.start_date(class="form-control form-control-lg") }}-->
-                          </div>
-                          <div id="end_date" class="form-group text-right">
-                              {{ form.end_date.label(class="form-control-label") }}
-                          </div>
-                          <div class="form-group text-md-center">
-                              {{form.end_date(id="end_date_value")}}
-                          </div>
-                          <div>
-                              {{ form.submit(class="btn btn-outline-info") }}
-                          </div>
-                      </fieldset>
+                  <br>
+                  <form>
+                      <h3 class="form-group text-right" style="font-weight: bold;">בחירת דיין</h3>
+                      <select class="form-group text-right" id="judges_options">
+                          <option></option>
+                      </select>
                   </form>
+                  <script src="//code.jquery.com/jquery-2.1.1.min.js"></script>
+                  <script>
+                    "use strict";
+
+                    var judges = {{ judges|tojson }};
+
+                    var form = $('form');
+                    var judges_options = $('select#judges_options');
+
+                    for ([key, val] of judges) {
+                        judges_options.append($('<option/>', {'value': key.id, 'text': key.name}));
+                    }
+
+                  </script>
+
+
+
               </ul>
           </div>
     </div>
@@ -52,9 +55,11 @@
             events : [
                 {% for event in events %}
                     {
-                        title : '{{event.todo}}',
-                        start : '{{event.date}}',
-                        end : '{{event.date}}'
+                        title : "{{event['title']}}",
+                        start : "{{event['start']}}",
+                        end : "{{event['end']}}",
+                        backgroundColor: "{{event['color']}}"
+
                     },
                 {% endfor %}
             ],
