split utility functions to ultilities file and vacations show on calendar

--- a/AlgoLaw_Website/AlgoLawWeb/templates/judge_long_vaca.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/judge_long_vaca.html
@@ -54,9 +54,10 @@
             events : [
                 {% for event in events %}
                     {
-                        title : '{{event.todo}}',
-                        start : '{{event.date}}',
-                        end : '{{event.date}}'
+                        title : "{{event['title']}}",
+                        start : "{{event['start']}}",
+                        end : "{{event['end']}}",
+                        backgroundColor: "{{event['color']}}"
                     },
                 {% endfor %}
             ],
