--- a/AlgoLaw_Website/AlgoLawWeb/templates/judge_case_assignments.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/judge_case_assignments.html
@@ -20,8 +20,10 @@
             events : [
                 {% for event in events %}
                     {
-                        title : '{{event.todo}}',
-                        start : '{{event.date}}'
+                        title : "{{event['title']}}",
+                        start : "{{event['start']}}",
+                        end : "{{event['end']}}",
+                        backgroundColor: "{{event['color']}}"
                     },
                 {% endfor %}
             ]
