--- a/AlgoLaw_Website/AlgoLawWeb/templates/judge_case_search.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/judge_case_search.html
@@ -22,8 +22,10 @@
             events : [
                 {% for event in events %}
                     {
-                        title : '{{event.todo}}',
-                        start : '{{event.date}}'
+                        title : "{{event['title']}}",
+                        start : "{{event['start']}}",
+                        end : "{{event['end']}}",
+                        backgroundColor: "{{event['color']}}"
                     },
                 {% endfor %}
             ]
