changes to models.py

--- a/AlgoLaw_Website/AlgoLawWeb/templates/master_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/master_space.html
@@ -20,7 +20,7 @@
                 </div>
                 <div>
                     <article class="d-flex justify-content-center content-section">
-                        <a class="btn btn-primary text-center" href="{{ url_for('master_vacation_view') }}">
+                        <a class="btn btn-primary text-center" href="{{ url_for('master_vacation_view', judge_id='none') }}">
     <!--                        <img src="{{url_for('static',filename = 'Web_models/changes_for_schedule_big.jpeg')}}" width="200" height="200">-->
                             Look at vacations
                         </a>
