added DB functionality to web

--- a/AlgoLaw_Website/AlgoLawWeb/templates/login.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/login.html
@@ -49,4 +49,12 @@
             אין משתמש? <a class="ml-2" href="{{ url_for('register') }}"> הירשמו עכשיו </a>
         </small>
     </div>
+
+<!--    DEBUGGGG   -->
+    <div class="border-top pt-3">
+        <small class="text-muted">
+            <a class="ml-2" href="{{ url_for('initiate_db') }}"> initiate db </a>
+        </small>
+    </div>
+
 {% endblock content %}
