--- a/AlgoLaw_Website/AlgoLawWeb/templates/master_vacation_view.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/master_vacation_view.html
@@ -37,37 +37,38 @@
                 judgeIdToUse = judgeId
             }
             let result = await fetch(`/${judgeIdToUse}/get_all_judge_events`)
-                    let body = await result.json();
-                    let eventsForCal = [];
-                    for (let event of body){
-                        let currentPush ={title: event.title,
-                                    start: Date.parse(event.start),
-                                    end: Date.parse(event.end),
-                                    backgroundColor: event.color}
-                        eventsForCal.push(currentPush)
+            let body = await result.json();
+            let eventsForCal = [];
+            for (let event of body){
+                let currentPush ={title: event.title,
+                            start: Date.parse(event.start),
+                            end: Date.parse(event.end),
+                            backgroundColor: event.color,
+                            id: event.id}
+                eventsForCal.push(currentPush)
 
-                                }
-                    console.log(body);
-                    let calendarEl = document.getElementById('judge_calendar');
-                    let judge_calendar = new FullCalendar.Calendar(calendarEl, {
-                        locale: 'he',
-                        initialView: 'dayGridMonth',
-                        selectable: true,
-                        direction: 'rtl',
-                        events: eventsForCal,
-                        eventClick: function (info) {
-                            var eventObj = info.event;
+                        }
+            console.log(body);
+            let calendarEl = document.getElementById('judge_calendar');
+            let judge_calendar = new FullCalendar.Calendar(calendarEl, {
+                    locale: 'he',
+                    initialView: 'dayGridMonth',
+                    selectable: true,
+                    direction: 'rtl',
+                    events: eventsForCal,
+                    eventClick: function (info) {
+                        var eventObj = info.event;
+                        if (eventObj.backgroundColor == '#DC143C') {
                             let isVerified = confirm("חופשה מאושרת?")
                             if (isVerified) {
-
+                                var xhr = new XMLHttpRequest();
+                                xhr.open("POST", `/verification_of_vacations/${eventObj.id}`, true);
+                                xhr.send();
                             }
-                            else {
-
                             }
-                            }
-                })
-                    ;
-                    judge_calendar.render();
+                        }
+            });
+            judge_calendar.render();
 
 
         }
