--- a/AlgoLaw_Website/AlgoLawWeb/templates/judge_case_search.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/judge_case_search.html
@@ -17,8 +17,10 @@
     <script>
         let calendarEl = document.getElementById('judge_calendar');
         let judge_calendar = new FullCalendar.Calendar(calendarEl, {
+            locale: 'he',
             initialView: 'listWeek',
             selectable: true,
+            direction: 'rtl',
             events : [
                 {% for event in events %}
                     {
