--- a/AlgoLaw_Website/AlgoLawWeb/templates/master_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/master_space.html
@@ -14,7 +14,7 @@
                     <article class="d-flex justify-content-center content-section">
                         <a class="btn btn-primary text-center" href="{{ url_for('upload_generic', variable='מתן אילוצים') }}">
         <!--                    <img src="{{url_for('static',filename = 'Web_models/changes_for_schedule_big.jpeg')}}" width="200" height="200">-->
-                            Long vacation verification
+<!--                            Long vacation verification-->
                         </a>
                     </article>
                 </div>
@@ -30,7 +30,7 @@
                     <article class="d-flex justify-content-center content-section">
                         <a class="btn btn-primary text-center" href="{{ url_for('upload_generic', variable='מתן אילוצים') }}">
         <!--                    <img src="{{url_for('static',filename = 'Web_models/changes_for_schedule_big.jpeg')}}" width="200" height="200">-->
-                            specific judge view
+<!--                            specific judge view-->
                         </a>
                     </article>
                 </div>
