--- a/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
@@ -7,7 +7,33 @@
         <div class="p-2 d-flex justify-content-end">
             <h3 style="font-weight: bold;">יש לבחור את הפעולה הרצויה</h3>
         </div>
-        <div class="d-flex justify-content-center align-content-around flex-wrap">
+
+        <h2 class="p-2 d-flex justify-content-end" style="font-weight: bold;">תיקים</h2>
+        <div class="d-flex justify-content-end align-content-around flex-wrap">
+            <div>
+                <a href="{{ url_for('run_logic') }}">
+                    <img src="{{url_for('static',filename = 'Web_models/schedule_cases_big.jpeg')}}" width="200" height="200">
+                </a>
+            </div>
+            <div>
+                <a href="{{ url_for('upload_generic', variable='דחיית דיון') }}">
+                    <img src="{{url_for('static',filename = 'Web_models/push_back_case_big.jpeg')}}" width="200" height="200">
+                </a>
+            </div>
+        </div>
+
+        <h2 class="p-2 d-flex justify-content-end" style="font-weight: bold;">מנהלה</h2>
+        <div class="d-flex justify-content-end align-content-around flex-wrap">
+            <div>
+                <a href="{{ url_for('upload_generic', variable='שיבוץ תורנויות') }}">
+                    <img src="{{url_for('static',filename = 'Web_models/schedule_chore_big.jpeg')}}" width="200" height="200">
+                </a>
+            </div>
+            <div>
+                <a href="{{ url_for('upload_generic', variable='לו״ז בית הדין למשמורת') }}">
+                    <img src="{{url_for('static',filename = 'Web_models/schedule_chores_other_big.jpeg')}}" width="200" height="200">
+                </a>
+            </div>
             <div>
                 <a href="{{ url_for('upload_generic', variable='מתן אילוצים') }}">
                     <img src="{{url_for('static',filename = 'Web_models/changes_for_schedule_big.jpeg')}}" width="200" height="200">
@@ -18,36 +44,20 @@
                     <img src="{{url_for('static',filename = 'Web_models/change_privilage_big.jpeg')}}" width="200" height="200">
                 </a>
             </div>
-            <div>
-                <a href="{{ url_for('upload_generic', variable='שיבוץ תורנויות') }}">
-                    <img src="{{url_for('static',filename = 'Web_models/schedule_chore_big.jpeg')}}" width="200" height="200">
-                </a>
-            </div>
-            <div>
-                <a href="{{ url_for('upload_generic', variable='שיבוץ תיקים') }}">
-                    <img src="{{url_for('static',filename = 'Web_models/schedule_cases_big.jpeg')}}" width="200" height="200">
-                </a>
-            </div>
-            <div>
-                <a href="{{ url_for('judge_case_assignments') }}">
-                    <img src="{{url_for('static',filename = 'Web_models/divide_cases_big.jpeg')}}" width="200" height="200">
-                </a>
-            </div>
+
+
+<!--            <div>-->
+<!--                <a href="{{ url_for('judge_case_assignments') }}">-->
+<!--                    <img src="{{url_for('static',filename = 'Web_models/divide_cases_big.jpeg')}}" width="200" height="200">-->
+<!--                </a>-->
+<!--            </div>-->
             <div>
                 <a href="{{ url_for('upload_generic', variable='שיבוץ חגים ומועדים') }}">
                     <img src="{{url_for('static',filename = 'Web_models/schedule_vacation_big.jpeg')}}" width="200" height="200">
                 </a>
             </div>
-            <div>
-                <a href="{{ url_for('upload_generic', variable='לו״ז בית הדין למשמורת') }}">
-                    <img src="{{url_for('static',filename = 'Web_models/schedule_chores_other_big.jpeg')}}" width="200" height="200">
-                </a>
-            </div>
-            <div>
-                <a href="{{ url_for('upload_generic', variable='דחיית דיון') }}">
-                    <img src="{{url_for('static',filename = 'Web_models/push_back_case_big.jpeg')}}" width="200" height="200">
-                </a>
-            </div>
+
+
         </div>
     </div>
 {% endblock content %}
