fixed path problems

--- a/AlgoLaw_Website/AlgoLawWeb/templates/upload_generic.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/upload_generic.html
@@ -22,7 +22,7 @@
         </form>
 <!--        disclaimer-->
         <div class="p-2 d-flex justify-content-end">
-            <h5 style="font-weight: bold;">במידה ויש שינויים באילוצים, נא להעלות את הקובץ מחדש</h5>
+            <h5 style="font-weight: bold;">במידה ויש שינויים, נא להעלות את הקובץ מחדש</h5>
         </div>
     </div>
 {% endblock content %}
