added hall logic to calendar

--- a/AlgoLaw_Website/AlgoLawWeb/templates/master_vacation_view.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/master_vacation_view.html
@@ -101,7 +101,7 @@
             else{
                 LocationToUse = Location
             }
-            if (Hall == undefined){
+            if (Hall == undefined | Hall == 'All'){
                 HallToUse = 'none'
             }
             else{
