--- a/AlgoLaw_Website/AlgoLawWeb/templates/master_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/master_space.html
@@ -22,7 +22,7 @@
                     <article class="d-flex justify-content-center content-section">
                         <a class="btn btn-primary text-center" href="{{ url_for('master_vacation_view', judge_id='none') }}">
     <!--                        <img src="{{url_for('static',filename = 'Web_models/changes_for_schedule_big.jpeg')}}" width="200" height="200">-->
-                            Look at vacations
+                            Overall Calendar Look
                         </a>
                     </article>
                 </div>
@@ -34,6 +34,11 @@
                         </a>
                     </article>
                 </div>
+                <div>
+                <a href="{{ url_for('run_logic') }}">
+                    <img src="{{url_for('static',filename = 'Web_models/schedule_cases_big.jpeg')}}" width="200" height="200">
+                </a>
+            </div>
             </div>
         </article>
     </div>
