--- a/AlgoLaw_Website/AlgoLawWeb/templates/master_vacation_view.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/master_vacation_view.html
@@ -8,7 +8,7 @@
     <div class="d-flex">
         <div id="judge_calendar" class="col-md-11"></div>
         <div class="col-md-3">
-            <h2 class="form-group text-right" style="font-weight: bold;"> חופשות </h2>
+            <h2 class="form-group text-right" style="font-weight: bold;"> כולל </h2>
               <ul class="list-group">
 
                 <h3 class="form-group text-right" style="font-weight: bold;">מחוז</h3>
