--- a/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
+++ b/AlgoLaw_Website/AlgoLawWeb/templates/secretary_space.html
@@ -21,7 +21,7 @@
                 </a>
             </div>
             <div class="col-sm-2">
-                <a href="{{ url_for('upload_generic', variable='לו״ז בית הדין למשמורת') }}">
+                <a href="{{ url_for('calendar') }}">
                     <h4>לו״ז</h4>
 <!--                    <img src="{{url_for('static',filename = 'Web_models/schedule_chores_other_big.jpeg')}}" width="200" height="200">-->
                 </a>
